syntax = "proto3";

package appuser.middleware.user.recoverycode.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/appuser/middleware/v1/user/recoverycode";

import "basetypes/v1/conds.proto";

message RecoveryCodeReq {
  optional uint32 ID = 10;
  optional string EntID = 20;
  optional string UserID = 30;
  optional string AppID = 40;
  optional bool Used = 50;
  optional string Code = 60;
}

message RecoveryCode {
  // @inject_tag: sql:"id"
  uint32 ID = 10;
  // @inject_tag: sql:"ent_id"
  string EntID = 20;
  // @inject_tag: sql:"app_id"
  string AppID = 30;
  // @inject_tag: sql:"code"
  string Code = 40;
  // @inject_tag: sql:"used"
  bool Used = 50;
  // @inject_tag: sql:"user_id"
  string UserID = 60;
  // @inject_tag: sql:"email_address"
  string EmailAddress = 70;
  // @inject_tag: sql:"created_at"
  string CreatedAt = 80;
  // @inject_tag: sql:"updated_at"
  string UpdatedAt = 90;
}

message Conds {
  optional basetypes.v1.Uint32Val ID = 10;
  optional basetypes.v1.StringVal EntID = 20;
  optional basetypes.v1.StringVal AppID = 30;
  optional basetypes.v1.StringVal UserID = 40;
  optional basetypes.v1.StringVal Code = 50;
  optional basetypes.v1.BoolVal Used = 60;
}

